# vibemux

./: Cargo.toml  README.md
.claude/: settings.local.json
crates/vibemux-app/: Cargo.toml
crates/vibemux-app/src/: app.rs  box_drawing.rs  command_palette.rs  find_bar.rs  git_info.rs  main.rs  notification_panel.rs  notifications.rs  pty_stream.rs  resize_layout.rs  session.rs  sidebar.rs  split_view.rs  tab_bar.rs  term_selection.rs  term_view.rs  theme.rs
crates/vibemux-cli/: Cargo.toml
crates/vibemux-cli/src/: main.rs
crates/vibemux-config/: Cargo.toml
crates/vibemux-config/src/: lib.rs
crates/vibemux-ipc/: Cargo.toml
crates/vibemux-ipc/src/: handler.rs  lib.rs  protocol.rs  server.rs
crates/vibemux-mux/: Cargo.toml
crates/vibemux-mux/src/: lib.rs  pane.rs  split.rs  workspace.rs
crates/vibemux-term/: Cargo.toml
crates/vibemux-term/src/: grid.rs  lib.rs  pty_backend.rs  terminal.rs
