[workspace]
resolver = "2"
members = [
    "crates/vibemux-app",
    "crates/vibemux-term",
    "crates/vibemux-mux",
    "crates/vibemux-ipc",
    "crates/vibemux-cli",
    "crates/vibemux-config",
]

[workspace.dependencies]
vibemux-term = { path = "crates/vibemux-term" }
vibemux-mux = { path = "crates/vibemux-mux" }
vibemux-ipc = { path = "crates/vibemux-ipc" }
vibemux-config = { path = "crates/vibemux-config" }

iced = { version = "0.14", features = ["wgpu", "tokio", "advanced", "canvas"] }
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
git2 = "0.20"
