[package]
name = "vibemux-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vibemux"
path = "src/main.rs"

[dependencies]
vibemux-ipc = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
