[package]
name = "vibemux-term"
version = "0.1.0"
edition = "2024"

[dependencies]
vibemux-config = { workspace = true }
portable-pty = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
vte = "0.15"
which = "7"
unicode-width = "0.2"
